Fix dropdown not showing

--- a/src/sass/blocks/_header.scss
+++ b/src/sass/blocks/_header.scss
@@ -78,6 +78,7 @@
     }
     &__dropdown {
         position: absolute;
+        z-index: 1000;
         left: 0;
         top: 100%;
         background: #37474F;
